[gd_scene load_steps=4 format=3 uid="uid://crvbt6pqib5vv"]

[ext_resource type="Script" path="res://scenes/menus/settings_menu.gd" id="1_cdpil"]
[ext_resource type="LabelSettings" uid="uid://bmxd075wxx0x5" path="res://scenes/menus/settings_menu_labels.tres" id="1_ft2k5"]
[ext_resource type="FontFile" uid="uid://isjud3j2bjck" path="res://assets/font/ark-pixel-12px-monospaced-latin.ttf" id="1_kcy8h"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cdpil")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -144.0
offset_right = 272.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -80.0
offset_right = 160.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 16
columns = 2

[node name="FullScreenLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Fullscreen"
label_settings = ExtResource("1_ft2k5")

[node name="FullScreenOption" type="CheckButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VolumeLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Volume"
label_settings = ExtResource("1_ft2k5")

[node name="VolumeSlider" type="HSlider" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -58.0
offset_top = -228.0
offset_right = 58.0
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_kcy8h")
theme_override_font_sizes/font_size = 36
text = "Return"

[connection signal="toggled" from="GridContainer/FullScreenOption" to="." method="_on_full_screen_option_toggled"]
[connection signal="value_changed" from="GridContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
